# Hiking_data_to_Sui_blockchain

./: .env  .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  hiking_data.json  mint_request.json
backend/data/nft/: NFT_name51.json
backend/data/waypoint/: waypoints.json
backend/src/: main.rs
backend/src/models/: structs.rs
backend/src/routes/: handlers.rs  mod.rs
backend/src/services/: gpx.rs  mod.rs  operations.rs
backend/src/utils/: mod.rs
devnet/: Move.toml
devnet/sources/: hiking.move  my_nft.move
devnet/tests/: devnet_tests.move
frontend/: package-lock.json  package.json
frontend/devnet_nft/: Move.toml
frontend/devnet_nft/tests/: nft_manager_tests.move
frontend/src/: App.tsx  WalletAddressContext.tsx
frontend/src/components/: NFTForm.js
frontend/src/services/: nftService.js  suiService.ts
mint-site/: index.html  package-lock.json
mint-site/src/: App.tsx  MintSanmove.tsx  constants.ts  networkConfig.ts  vite-env.d.ts
nft-viz/: index.html  package-lock.json
nft-viz/src/: index.ts
rust/: Cargo.toml
rust/src/: main.rs
rust/src/models/: structs.rs
rust/src/routes/: handlers.rs
src/: main.rs
