[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
geoutils = "0.5.1"
gpx = "0.8.6"
chrono ="0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SUI 관련 크레이트
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}

anyhow = "1.0"
bcs = "0.1.6"
uuid = { version = "1.4", features = ["v4"] }

# Web
actix-web = "4.9.0"
actix-rt ="2.10.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.9"
warp = "0.3"