[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
gpx = "0.8.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SUI 관련 크레이트
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}


# Web
actix-web = "4.9.0"
actix-multipart = "0.7.2"
tokio = { version = "1", features = ["full"] }

futures-util = "0.3.31"
sanitize-filename = "0.5.0"
uuid = "1.11.0"

warp = "0.3.7"
multer = "2.0"
bytes = "1.9.0"